# germina

./: README.md  pyproject.toml  release.sh  teste.c
data/: a
docs/: index.html
examples/: vae-mnist.py  visual.py
experiments/: 2023-10-10.py  breastfeeding---2023-10-23.py  clustering-metadata.py  clustering-nmds.py  clustering-pca.py  compare-permutation-with-binomial.py  dyad---2023-10-23.py  embedding---2023-10-23.py  ensemble-paradox.py  mkfold.py  nathalia---2023-10-23.py  nmds-plot.py
experiments/clustering/: beta-diversity_metadata_eeg.py  beta-diversity_metadata_eeg_varsrisco.py
experiments/hyperscanning/: a.py  dyad---2023-10-23.py  dyad--y-imput---2023-10-23.py  dyad-with-imputation---2023-10-23.py  dyadic-vs-eeg---2023-12-26.py  dyadic-vs-single--eeg---2023-12-26.py  embedding---2023-10-23.py
experiments/integration/: 2023-10-10.py
experiments/microbiome/: bayleyibq-LOO---2023-12-13.py  bayleyibq-fromcsv-decisionboundary-2024-02-12.py  bayleyibq-fromcsv-halfstd-2024-02-09.py  bayleyibq-fromcsv-hardcut-2024-02-04.py  bayleyibq-fromcsv-hardcut-embedding-2024-02-04.py  bayleyibq-fromcsv-hardcut-pairwise-2024-02-04.py  bayleyibq-fromcsv-hardcut-vote-2024-02-04.py  bayleyibq-fromcsv-slidingwindowoverage-2024-02-04.py  breastfeeding---2023-10-23.py  breastfeeding-LOO---2023-11-11.py  clustering-targets-difference.py  clustering-targets.py  pairwise.py  pairwise_v2.py  pairwise_v3.py  pairwise_v3_l2o.py  pairwise_v3_l2o_motherdata.py  pairwise_v3up.py  pairwisev1_and_eeg_csv_generator.py  plot---breastfeeding-LOO---2023-11-11.py  regression-inside-l1o---holly.py  regression-inside-l2o.py
experiments/old/: clustering-metadata.py  lkfold.py  nathalia.py  nmds-plot.py
experiments/prediction/: beta-diversity_metadata_eeg_varsrisco.py  eegbetaconnrs---report---2023-06-21.py  ibqreg---report---2023-06-21.py  metadata__risk-score___abundance__metabolic-pathways__alpha-diversity___rs-connectivity.py  report---2023-06-21.py  report---2023-07-18---tree.py  report---2023-07-18.py
experiments/projection/: beta-diversity.py  clustering-nmds.py  clustering-pca.py
src/germina/: aux.py  cols.py  config.py  data.py  dataset.py  embedding.py  l2o.py  loader.py  loo.py  nan.py  ordinalclassifier.py  pairwise.py  pairwiseclassifier.py  pairwiserf.py  runner.py  sampling.py  shaps.py  stats.py  tree.py  trees.py  vae.py
