[tool.poetry]
name = "germina"
version = "0.230413.0"
description = ""
authors = ["davips <dpsabc@gmail.com>"]
readme = "README.md"
packages = [{include = "germina", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
hdict = {version = "^0.230412.3", extras = ["full"]}
matplotlib = "^3.7.1"
datasets = "^2.11.0"
pymysql = "^1.0.3"
pathos = "^0.3.0"

[tool.poetry.extras]    #[tool.poetry.group.extras.dependencies]
full = []

[tool.poetry.group.dev.dependencies]
autoreadme = "^0.2102.20"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
pdoc3 = "^0.10.0"
pylint = "^2.7.4"
testfixtures = "^7.1.0"
ipython = "^8.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
