[tool.poetry]
name = "germina"
version = "0.230413.0"
description = ""
authors = ["davips <dpsabc@gmail.com>"]
readme = "README.md"
packages = [{include = "germina", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
hdict = "^2.230721.3"
matplotlib = "^3.7.1"
datasets = "^2.11.0"
pymysql = "^1.0.3"
pathos = "^0.3.0"
pandas = "^2.0.1"
scikit-learn = "1.2.2"
numpy = "^1.24.3"
seaborn = "^0.12.2"
sortedness = "^1.230712.2"
#mdscuda = "^0.1.3"
xgboost = "^1.7.6"
catboost = "^1.2"
lightgbm = "^3.3.5"
safeserializer = "^0.230202.1"
lz4 = "^4.3.2"
statsmodels = "^0.14.0"
shelchemy = "^2.230727.3"
argvsucks = "^0.230725.6"
imodels = "^1.3.17"

[tool.poetry.extras]    #[tool.poetry.group.extras.dependencies]
full = []

[tool.poetry.group.dev.dependencies]
autoreadme = "^0.2102.20"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
pdoc3 = "^0.10.0"
pylint = "^2.7.4"
testfixtures = "^7.1.0"
ipython = "^8.9.0"
setuptools = "^67.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
