[tool.poetry]
name = "germina"
version = "0.230413.0"
description = ""
authors = ["davips <dpsabc@gmail.com>"]
readme = "README.md"
packages = [{include = "germina", from = "src"}]

[tool.poetry.dependencies]
python = "3.11.2"
matplotlib = "^3.7.1"
datasets = "^2.11.0"
pymysql = "^1.0.3"
pathos = "^0.3.0"
pandas = "^2.0.1"
scikit-learn = "^1.3.2"
numpy = "^1.24.3"
seaborn = "^0.12.2"
sortedness = "^1.230712.2"
xgboost = "^1.7.6"
catboost = "^1.2"
lightgbm = "^3.3.5"
safeserializer = "^0.230202.1"
lz4 = "^4.3.2"
statsmodels = "^0.14.0"
argvsucks = "^0.230725.7"
imodels = "^1.3.17"
torch = {version = ">=2.0.0, !=2.0.1, !=2.1.0"}
dalex = "^1.6.0"
plotly = "^5.18.0"
hosh = "^3.230705.5"
shelchemy = "^2.240219.1"
gradient-descent-the-ultimate-optimizer = "^1.0"
torchvision = "^0.16.2"
hdict = "^2.240217.0"

[tool.poetry.extras]    #[tool.poetry.group.extras.dependencies]
full = []

[tool.poetry.group.dev.dependencies]
autoreadme = "^0.2102.20"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
pdoc3 = "^0.10.0"
pylint = "^2.7.4"
testfixtures = "^7.1.0"
ipython = "^8.9.0"
setuptools = "^67.7.2"
synapseclient = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
